# anychat-sdk

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  release.yml
bindings/android/: CMakeLists.txt  README.md  build.gradle.kts  proguard-rules.pro
bindings/android/kotlin/com/anychat/sdk/: AnyChatClient.kt
bindings/android/src/main/cpp/: jni_bridge.cpp  jni_group.cpp  jni_helpers.cpp  jni_message.cpp
bindings/android/src/main/kotlin/com/anychat/sdk/: Callbacks.kt  Friend.kt  Group.kt  Message.kt
bindings/flutter/: .gitignore  IMPLEMENTATION.md  README.md  pubspec.yaml
bindings/flutter/android/: CMakeLists.txt
bindings/flutter/example/: pubspec.yaml
bindings/flutter/example/lib/: main.dart
bindings/flutter/ios/: anychat_flutter.podspec
bindings/flutter/lib/: anychat.dart
bindings/flutter/lib/src/: anychat_client.dart  models.dart
bindings/flutter/macos/: anychat_flutter.podspec
bindings/flutter/windows/: CMakeLists.txt
bindings/ios/: AnyChatSDK.podspec  IMPLEMENTATION.md  Package.swift  README.md
bindings/ios/Examples/: ExampleApp.swift
bindings/ios/Sources/AnyChatSDK/: AnyChatSDK.h  Conversation.swift  File.swift  Friend.swift  Models.swift  RTC.swift  module.modulemap
bindings/ios/Sources/AnyChatSDK/Internal/: CAPIBridge.swift  Helpers.swift
bindings/ios/swift/: AnyChatClient.swift
bindings/web/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh  package.json  tsconfig.json
bindings/web/example/: README.md  app.ts  index.html
bindings/web/src/: EventEmitter.ts  anychat_post.js  embind_wrapper.cpp
cmake/: ios.toolchain.cmake
core/: CMakeLists.txt
core/include/anychat/: anychat.h  auth.h  call.h  callbacks.h  client.h  conversation.h  errors.h  file.h  friend.h  group.h  message.h  network_monitor.h  rtc.h  types.h  user.h  version.h
core/include/anychat_c/: anychat_c.h  anychat_c_export.h  auth_c.h  call_c.h  client_c.h  conversation_c.h  errors_c.h  file_c.h  friend_c.h  group_c.h  message_c.h  rtc_c.h  types_c.h  user_c.h  version_c.h
core/src/: auth_manager.cpp  auth_manager.h  call_manager.cpp  call_manager.h  client.cpp  client_impl.cpp  client_impl.h  connection_manager.cpp  connection_manager.h  conversation_manager.cpp  conversation_manager.h  file_manager.cpp  file_manager.h  friend_manager.cpp  friend_manager.h  group_manager.cpp  group_manager.h  json_common.h  message_manager.cpp  message_manager.h  notification_manager.cpp  notification_manager.h  outbound_queue.cpp  outbound_queue.h  rtc_manager.cpp  rtc_manager.h  sync_engine.cpp  sync_engine.h  user_manager.cpp  user_manager.h  version_manager.cpp  version_manager.h
core/src/c_api/: auth_c.cpp  call_c.cpp  client_c.cpp  conversation_c.cpp  errors_c.cpp  file_c.cpp  friend_c.cpp  group_c.cpp  handles_c.h  message_c.cpp  rtc_c.cpp  user_c.cpp  utils_c.cpp  utils_c.h  version_c.cpp
core/src/cache/: conversation_cache.h  lru_cache.h  message_cache.h
core/src/db/: database.cpp  database.h  migrations.cpp  migrations.h
core/src/internal/: auth.h  call.h  client.h  file.h  friend.h  group.h  message.h  types.h  user.h  version.h
core/src/network/: http_client.cpp  http_client.h  iwebsocket_client.h  websocket_client.cpp  websocket_client.h
core/tests/: CMakeLists.txt  test_auth.cpp  test_cache.cpp  test_call_manager.cpp  test_client.cpp  test_connection_manager.cpp  test_conversation_manager.cpp  test_database.cpp  test_file_manager.cpp  test_friend_manager.cpp  test_group_manager.cpp  test_message_manager.cpp  test_notification_manager.cpp  test_outbound_queue.cpp  test_rtc_manager.cpp  test_sync_engine.cpp  test_types.cpp  test_user_manager.cpp  test_version_manager.cpp
docs/: architecture.md  async_callback_error_handling.md  backend-design.md  build-guide.md  c_api_guide.md  implementation-plan.md  local_testing.md
examples/android-sample/: README.md
examples/c_example/: main.c
examples/flutter-sample/: .gitignore  README.md  pubspec.yaml
examples/flutter-sample/lib/: config.dart  main.dart
examples/flutter-sample/lib/screens/: home_screen.dart  login_screen.dart  register_screen.dart  welcome_screen.dart
examples/flutter-sample/lib/services/: auth_service.dart
examples/flutter-sample/linux/: CMakeLists.txt  my_application.cc  my_application.h
examples/flutter-sample/windows/runner/: main.cpp
examples/ios-sample/: README.md
examples/web-sample/: README.md
scripts/: backup_git_changes.py  build.py  format_code.py
swig/: anychat.i
swig/modules/: auth.i  client.i  message.i  types.i
tools/: build-android.py  build-ios.py  build-native.py  build-web.py  generate-bindings.py  release.py
